# bbot

./: .gitignore  Cargo.toml  config.toml.example
src/: config.rs  login.rs  main.rs  transmission.rs  utils.rs
src/parse/: torrent.rs  user.rs
