[package]
name = "bbot"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
bitflags = "2"
once_cell = "1"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies"] }
reqwest_cookie_store = "0.6"
scraper = "0.19"
toml = "0.8"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
transmission-rpc = "0.4"